zmiana strony glownej

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,10 +2,17 @@
 <html lang="pl">
     <head>
         <meta charset="UTF-8">
-        <title>Blod programistyczny</title>
+        <title>Blog programistyczny</title>
     </head>
     <body>
-        <p>Witam na blogu</p>
         <a href="http://127.0.0.1:8000/admin">Panel admina</a>
+        <p>Witam na blogu</p>
+        {%for post in posts%}
+        <div>
+            <p>opublikowany: {{post.publish_date}}</p>
+            <h2>{{post.title}}</h2>
+            <em>{{post.text|linebreaksbr}}</em>        
+        </div>
+        {%endfor%}
     </body>
 </html>
